[build-dependencies]
bindgen = "0.71.1"

[package]
build = "build.rs"
name = "labjack_ud_rs"
authors = ["Callum Welsh <callumwelsh@princeton.edu>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Rust Bindings for the LabJack UD Library"
repository = "https://github.com/Callum-Welsh/labjack_ud_rs/"




[dependencies]
